syntax = "proto3";

package test;

service TestService {
  rpc PingPong (PingPongRequest) returns (PingPongResponse);
}

message PingPongRequest {
  string ping = 1;
}

message PingPongResponse {
  string pong = 1;
}